<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.amp_g01_reading_app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.amp_g01_reading_app.ui.category.CategoryFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.amp_g01_reading_app.ui.notifications.NotificationsFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.amp_g01_reading_app.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.amp_g01_reading_app.ui.settings.dashboard_management.ParentDashboardFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_parent_dashboard"/>

    <fragment
        android:id="@+id/nav_loginFragment"
        android:name="com.example.amp_g01_reading_app.ui.authentication.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/nav_signUpFragment"
        android:name="com.example.amp_g01_reading_app.ui.authentication.signup.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />

    <fragment
        android:id="@+id/nav_childAccountFragment"
        android:name="com.example.amp_g01_reading_app.ui.authentication.createChildAccount.ChildAccountFragment"
        android:label="fragment_child_account"
        tools:layout="@layout/fragment_child_account">
        <action
            android:id="@+id/action_childAccountFragment_to_homeFragment"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>